--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,82 @@
   --spacing-xl: 3rem;
 }
 
+/* general */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 html {
-  font-size: 16px;
-  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
+}
+
+p {
+  color: var(--primary-light);
+}
+
+/* transitions */
+
+a,
+.btn {
+  transition: all 300ms ease;
+}
+
+/* header section */
+
+header, nav,
+.nav-links {
+  display: flex;
+}
+
+header, nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
+}
+
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+a:hover {
+  color: var(--link-hover-color);
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+}
+
+.logo {
+  font-size: 2rem;
+}
+
+.logo:hover {
+  cursor: default;
+}
+
+/* Footer section */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
+
+.footer-links {
+  font-size: 3rem;
 }
