--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-root {
-  font-family: "Poppins" sans-serif;
+:root {
   line-height: 1.5;
   font-weight: 400;
 
@@ -55,11 +54,10 @@ root {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Poppins", sans-serif;
-}
-
-html {
-  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 p {
@@ -75,15 +73,18 @@ a,
 
 /* header section */
 
-header, nav,
-.nav-links {
+header {
+  position: sticky;
+  top: 0;
   display: flex;
-}
-
-header, nav {
   justify-content: space-around;
   align-items: center;
   height: 17vh;
+}
+
+header, nav,
+.nav-links {
+  display: flex;
 }
 
 .nav-links {
@@ -95,21 +96,16 @@ header, nav {
 a {
   color: var(--link-color);
   text-decoration: none;
-  text-decoration-color: white;
 }
 
 a:hover {
-  color: var(--link-hover-color);
+  color: var(--primary-light);
   text-decoration: underline;
   text-underline-offset: 1rem;
-  text-decoration-color: rgb(181, 181, 181);
 }
 
 .logo {
   font-size: 2rem;
-}
-
-.logo:hover {
   cursor: default;
 }
 
@@ -125,11 +121,14 @@ section {
 
 .title {
   font-size: 3rem;
+  color: var(--primary-dark);
+  font-weight: 500;
   text-align: center;
 }
 
 .subtitle {
   text-align: center;
+  color: var(--primary-color);
 }
 
 .section-text {
@@ -140,6 +139,7 @@ section {
 /* about me section */
 #about {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 20px;
@@ -147,13 +147,16 @@ section {
 
 .pic-container {
   display: flex;
-  height: 400px;
-  width: 400px;
+  width: 20vw;
+  height: auto;
   margin: auto 0;
 }
 
 .about-pic {
   border-radius: 2rem;
+  width: 100%; 
+  height: auto;
+  object-fit: cover; 
 }
 
 .about-txt {
@@ -183,42 +186,37 @@ section {
 
 .btn {
   font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
+  transition: background-color 300ms ease, color 300ms ease, border-color 300ms ease;
+  padding: 0.75rem 1.5rem;
+  min-width: 8rem;
   border-radius: 2rem;
+
 }
 
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+.btn-color-1, .btn-color-2:hover {
+  background: var(--complementary-color);
+  color: var(--text-color);
+  border: 2px solid transparent
 }
 
+.btn-color-2, .btn-color-1:hover {
+  background: none;
+  border: 2px solid var(--border-color);
+  color: var(--primary-dark);
+}
+
+.btn:hover,
 .btn-color-1:hover,
 .btn-color-2:hover {
+  border-color: var(--primary-dark);
   cursor: pointer;
 }
 
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
-}
-
-.btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
-
-.btn-color-2 {
-  background: none;
-}
-
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
-}
-
-.btn-container {
-  gap: 1rem;
+.btn:focus,
+.btn-color-1:focus,
+.btn-color-2:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .containers {
@@ -251,7 +249,7 @@ section {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 article {
@@ -282,21 +280,21 @@ article {
 
 .project-title {
   margin: 1rem;
-  color: black;
-}
-
-.project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+  color: var(--primary-dark);
 }
 
 .contact-info-container p {
   font-size: larger;
 }
 
+#resume {
+  padding: var(--spacing-lg);
+  text-align: center; 
+}
+
 .experience-subtitle {
-  color: rgb(85, 85, 85);
-  font-weight: 600;
+  color: var(--primary-light);
+  font-weight: 500;
   font-size: 1.75rem;
   margin-bottom: 2rem;
 }
@@ -312,8 +310,9 @@ article {
 
 .experience-details-container {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: var(--spacing-md);
 }
 
 .devs {
@@ -321,6 +320,8 @@ article {
   width: 10rem;
   justify-content: space-around;
   gap: 0.5rem;
+  color: var(--primary-dark);
+  font-weight: 400;
 }
 
 .about-containers {
@@ -333,10 +334,10 @@ article {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: #f4f4f4;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-color: var(--border-color);
   text-align: center;
 }
 
@@ -370,8 +371,13 @@ article {
   font-size: 1em;
 }
 
+.form-control:focus {
+  outline: 2px solid var(--accent-color-1);
+  box-shadow: 0 0 5px rgba(103, 148, 54, 0.5);
+}
+
 .error-message {
-  color: red;
+  color: var(--complementary-dark);
   font-size: 0.9em;
   margin: 5px 0;
 }
@@ -385,4 +391,82 @@ footer {
 
 footer p {
   text-align: center;
+}
+
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
+}
+
+.footer-links {
+  font-size: 2.5rem;
+}
+
+@media (max-width: 768px) {
+  .pic-container,
+  .about-pic,
+  .about-txt,
+  .project-img,
+  .contact-section {
+    width: 100%;
+  }
+
+  .project-container,
+  .btn-container {
+    flex-direction: column;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  header {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .btn {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  section {
+    margin: 0 2rem; 
+  }
+}
+
+ /* Responsive media queries */
+@media (max-width: 480px) {
+  .nav-links {
+    gap: 0.5rem;
+  }
+
+  .btn {
+    padding: 0.5rem 1rem; 
+  }
+
+  .title,
+  .subtitle {
+    font-size: 2rem; 
+  }
+
+  .section-text {
+    font-size: 1.5rem;
+  }
+
+  .containers,
+  .details-container,
+  .about-details-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-title,
+  .contact-info-container p,
+  .experience-subtitle,
+  .devs {
+    font-size: 1rem;
+  }
 }
