--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@ p {
   color: var(--primary-light);
 }
 
+.content {
+  height: 100%;
+}
+
 /* transitions */
 
 a,
@@ -75,16 +79,17 @@ a,
 
 header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  height: 17vh;
+  height: 10vh;
+  padding: 2.5rem 5rem;
 }
 
 .nav-links {
   display: flex;
   gap: 2rem;
   list-style: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 a {
@@ -95,10 +100,10 @@ a {
 a:hover {
   color: var(--primary-light);
   text-decoration: underline;
-  text-underline-offset: 1rem;
+  text-underline-offset: .5rem;
 }
 
-.logo {
+.logo-txt {
   font-size: 2rem;
   cursor: default;
 }
@@ -106,9 +111,9 @@ a:hover {
 /* sections */
 
 section {
-  padding-top: 4vh;
+  padding-top: .5rem;
   height: 96vh;
-  margin: 0 10rem;
+  margin: 0 5rem;
   box-sizing: border-box;
   min-height: fit-content;
 }
@@ -137,6 +142,7 @@ section {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  height: 100%;
 }
 
 .pic-container {
@@ -217,8 +223,7 @@ section {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 
 .containers,
@@ -379,12 +384,12 @@ article {
 /* Footer section */
 
 footer {
-  height: 26vh;
-  margin: 0 1rem;
+  margin: 2.5rem 1rem;
 }
 
 footer p {
   text-align: center;
+  font-size: .75rem;
 }
 
 .footer-links {
@@ -393,7 +398,7 @@ footer p {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 @media (max-width: 768px) {
