--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,6 @@
-header {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
 header .desktop-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 100%;
   padding: 1rem 5rem;
