--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary-100: #007ea7;
+  --primary-200: #53add9;
+  --primary-300: #bfffff;
+  --accent-100: #00a8e8;
+  --accent-200: #004d85;
+  --text-100: #ffffff;
+  --text-200: #e0e0e0;
+  --bg-100: #002633;
+  --bg-200: #133543;
+  --bg-300: #2e4e5d;
 }
 
 body {
-  --primary-100:#007EA7;
-  --primary-200:#53add9;
-  --primary-300:#bfffff;
-  --accent-100:#00A8E8;
-  --accent-200:#004d85;
-  --text-100:#FFFFFF;
-  --text-200:#e0e0e0;
-  --bg-100:#002633;
-  --bg-200:#133543;
-  --bg-300:#2e4e5d;
-    
   margin: 0;
   padding: 0;
   background-color: var(--bg-100);
@@ -41,297 +41,115 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  background-color: var(--bg-100);
-  color: var(--text-100);
+.main-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-section .main-content {
-  height: 100vh;
+a {
+  text-decoration: none;
+  color: var(--primary-100);
 }
 
 /* sections */
 
-section {
-  padding-top: .5rem;
-  height: 96vh;
-  margin: 0 5rem;
-  box-sizing: border-box;
-  min-height: fit-content;
-}
-
-.title {
-  font-size: 3rem;
-  color: var(--primary-dark);
-  font-weight: 500;
-  text-align: center;
-}
-
-.subtitle {
-  text-align: center;
-  color: var(--primary-color);
-}
-
-.section-text {
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
-}
-
-/* about me section */
-#about {
+/* Home section Starts */
+.home {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  height: 100%;
-}
-
-.pic-container {
-  display: flex;
-  width: 20vw;
-  height: auto;
-  margin: auto 0;
-}
-
-.about-pic {
-  border-radius: 2rem;
-  width: 100%; 
-  height: auto;
-  object-fit: cover; 
-}
-
-.about-txt {
-  flex: 1;
-  padding: 10px;
-  align-self: center;
-  text-align: center;
-}
-
-.subtitle,
-.title {
-  margin: 0;
-  padding: 5px 0;
-}
-
-.txt-content {
-  text-align: justify;
-}
-
-/* buttons */
-
-.btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.btn {
-  font-weight: 600;
-  transition: background-color 300ms ease, color 300ms ease, border-color 300ms ease;
-  padding: 0.75rem 1.5rem;
-  min-width: 8rem;
-  border-radius: 2rem;
-
-}
-
-.btn-color-1, .btn-color-2:hover {
-  background: var(--complementary-color);
-  color: var(--text-color);
-  border: 2px solid transparent
-}
-
-.btn-color-2, .btn-color-1:hover {
-  background: none;
-  border: 2px solid var(--border-color);
-  color: var(--primary-dark);
-}
-
-.btn:hover,
-.btn-color-1:hover,
-.btn-color-2:hover {
-  border-color: var(--primary-dark);
-  cursor: pointer;
-}
-
-.btn:focus,
-.btn-color-1:focus,
-.btn-color-2:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-
-.containers {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin: 2rem 0;
-}
-
-.containers,
-.about-details-container {
-  display: flex;
-}
-
-.details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
-}
-
-
-.project-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
   justify-content: space-between;
+  align-items: center;
+  padding: 50px;
 }
 
-article {
-  display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
+.profile-card {
+  max-width: 50%;
 }
 
-/* projects */
-
-#projects {
-  position: relative;
-  overflow-x: scroll;
-  
+.section-title .title-txt {
+  color: var(--primary-100);
+  font-size: 4.5rem;
+  font-weight: 300;
+  margin-bottom: 0.5rem;
+  letter-spacing: 1px;
 }
 
-.color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+.section-title .subtitle-txt {
+  color: var(--text-100);
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  letter-spacing: 1.5px;
 }
 
-.project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
-}
-
-.project-title {
-  margin: 1rem;
-  color: var(--primary-dark);
-}
-
-.contact-info-container p {
-  font-size: larger;
-}
-
-#resume {
-  padding: var(--spacing-lg);
-  text-align: center; 
-}
-
-.experience-subtitle {
-  color: var(--primary-light);
-  font-weight: 500;
-  font-size: 1.75rem;
+.section-txt {
+  color: var(--text-100);
+  line-height: 1.6;
   margin-bottom: 2rem;
 }
 
-.development-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
-}
-
-.experience-details-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  gap: var(--spacing-md);
-}
-
-.devs {
-  display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
-  color: var(--primary-dark);
-  font-weight: 400;
-}
-
-.about-containers {
-  display: flex;
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
-.details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background: #f4f4f4;
+.button {
+  background-color: transparent;
+  border: 1px solid var(--primary-100);
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: var(--border-color);
-  text-align: center;
+  color: var(--text-100);
+  text-transform: uppercase;
+  padding: 10px 50px;
+  cursor: pointer;
+  display: inline-block;
+  background-image: linear-gradient(
+    to right,
+    var(--primary-100) 50%,
+    transparent 50%
+  );
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: background-position 0.5s ease-out;
+  position: absolute;
+  overflow: hidden;
+  padding-left: 50px;
+  padding-right: 60px;
+  z-index: 1;
 }
 
-/* contact section */
+.button-icon {
+  position: absolute;
+  left: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: left 0.5s ease-out;
+}
 
-.contact-section {
-  background-color: #f4f4f4;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.button:hover .button-icon {
+  left: calc(100% - 30px);
+}
+
+.button:hover {
+  background-position: left bottom;
+  color: var(--text-100);
+}
+
+.img-container {
+  width: 40%;
+}
+
+.img-profile {
   width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
+  height: auto;
+  border-radius: 10px;
 }
 
-.contact-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-control {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1em;
-}
-
-.form-control:focus {
-  outline: 2px solid var(--accent-color-1);
-  box-shadow: 0 0 5px rgba(103, 148, 54, 0.5);
-}
-
-.error-message {
-  color: var(--complementary-dark);
-  font-size: 0.9em;
-  margin: 5px 0;
-}
+/* Home Section Ends */
 
 /* Footer section */
 
 footer {
+  padding: 0.5rem 0;
   margin: 2.5rem 1rem;
 }
 
 footer p {
   text-align: center;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 .footer-links {
@@ -341,72 +159,4 @@ footer p {
   align-items: center;
   gap: 2rem;
   font-size: 1.5rem;
-}
-
-@media (max-width: 768px) {
-  .pic-container,
-  .about-pic,
-  .about-txt,
-  .project-img,
-  .contact-section {
-    width: 100%;
-  }
-
-  .project-container,
-  .btn-container {
-    flex-direction: column;
-  }
-
-  .nav-links {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  header {
-    flex-direction: column;
-    height: auto;
-  }
-
-  .btn {
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-
-  section {
-    margin: 0 2rem; 
-  }
-}
-
- /* Responsive media queries */
-@media (max-width: 480px) {
-  .nav-links {
-    gap: 0.5rem;
-  }
-
-  .btn {
-    padding: 0.5rem 1rem; 
-  }
-
-  .title,
-  .subtitle {
-    font-size: 2rem; 
-  }
-
-  .section-text {
-    font-size: 1.5rem;
-  }
-
-  .containers,
-  .details-container,
-  .about-details-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .project-title,
-  .contact-info-container p,
-  .experience-subtitle,
-  .devs {
-    font-size: 1rem;
-  }
 }
