--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,11 @@ a {
 /* sections */
 
 /* Home section Starts */
+
 .home {
+  height: 100%;
+  max-width: 1366px;
+  margin: 50px auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -71,14 +75,13 @@ a {
   font-size: 4.5rem;
   font-weight: 300;
   margin-bottom: 0.5rem;
-  letter-spacing: 1px;
 }
 
 .section-title .subtitle-txt {
   color: var(--text-100);
   font-size: 2.5rem;
+  font-weight: 300;
   margin-bottom: 2rem;
-  letter-spacing: 1.5px;
 }
 
 .section-txt {
@@ -138,7 +141,198 @@ a {
   border-radius: 10px;
 }
 
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+  }
+
+  .profile-card,
+  .img-container {
+    max-width: 100%;
+    order: 2;
+  }
+
+  .section-title .title-txt,
+  .section-title .subtitle-txt,
+  .section-txt {
+    text-align: center;
+  }
+
+  .img-container {
+    max-width: 100%;
+    order: 1;
+    margin-bottom: 20px;
+  }
+
+  .img-profile {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .button {
+    display: inline-block;
+    position: relative;
+    padding: 10px 50px;
+  }
+}
+
 /* Home Section Ends */
+
+/* Contact section Starts */
+
+.contact {
+  height: 100%;
+  max-width: 1366px;
+  margin: 50px auto;
+  display: flex;
+  align-items: center;
+  padding: 50px;
+}
+
+.contact .textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.contact .textContainer h1 {
+  color: var(--primary-100);
+  font-size: 4.5rem;
+  font-weight: 400;
+}
+
+.contact .textContainer h2 {
+  color: var(--text-100);
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+.contact .textContainer span {
+  color: var(--text-200);
+  font-weight: 300;
+}
+
+.contact .formContainer {
+  flex: 1;
+  position: relative;
+}
+
+.contact .formContainer .phoneSvg {
+  stroke: var(--primary-100);
+  position: absolute;
+  margin: auto;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+}
+
+.contact .formContainer form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact .formContainer form input,
+.contact .formContainer form textarea {
+  padding: 20px;
+  background-color: var(--bg-200);
+  border: 1px solid var(--bg-100);
+  color: var(--text-100);
+  border-radius: 10px;
+}
+
+.contact .formContainer form #submit-btn {
+  background-color: transparent;
+  border: 1px solid var(--primary-100);
+  border-radius: 2rem;
+  color: var(--text-100);
+  text-transform: uppercase;
+  padding: 10px 50px;
+  cursor: pointer;
+  display: inline-block;
+  background-image: linear-gradient(
+    to right,
+    var(--primary-100) 50%,
+    transparent 50%
+  );
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: background-position 0.5s ease-out;
+  overflow: hidden;
+  padding-left: 50px;
+  padding-right: 60px;
+  z-index: 1;
+}
+
+.contact .formContainer form #submit-btn:hover {
+  background-position: left bottom;
+  color: var(--text-100);
+}
+
+.icon{
+    color: var(--primary-100);
+}
+
+.error-message {
+  color: var(--primary-100);
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.success-message {
+  color: var(--primary-100);
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .contact {
+    width: 100%;
+    padding: 10px;
+    flex-direction: column;
+  }
+
+  .contact .textContainer {
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+    margin-top: 70px;
+  }
+
+  .contact .formContainer {
+    padding: 50px;
+    width: 100%;
+  }
+
+  .contact .formContainer {
+    position: relative;
+  }
+
+  .contact .formContainer .phoneSvg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .contact .formContainer form input,
+  .contact .formContainer form textarea {
+    padding: 10px;
+  }
+
+  .contact .formContainer form button {
+    padding: 10px;
+  }
+}
+
+/* Contact section Ends */
 
 /* Footer section */
 
