--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -50,19 +50,19 @@
 
 /* Styles for the links, including smooth transition */
 .links a {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 300;
-    color: var(--text-100);
+    color: var(--text-200);
     text-decoration: none;
-    transition: border 0.3s ease-in-out, padding 0.3s ease-in-out, color 0.3s ease-in-out;
+    padding: 10px 50px;
+  border-radius: 2rem;
+  border: 1px solid var(--accent-100);
+  background-color: transparent;
 }
 
 /* Styles for hover state of the links */
 .links a:hover {
-    color: var(--accent-100);
-    border: 2px solid var(--accent-100);
-    border-radius: 2rem;
-    padding: 0.5rem 1rem;
+    color: var(--text-100);
 }
 
 /* Style for elements inside the links */
